--- a/Enunciados.Rmd
+++ b/Enunciados.Rmd
@@ -18,7 +18,7 @@ toc: true
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Laura Mayorgasdel Castillo
+# Laura Mayorgas del Castillo
 
 ## Problema 1 
 Aplicar los criterios de decisión bajo incertidumbre a los problemas cuya matriz de valores numéricos vienen dadas en la tabla siguiente: 
@@ -65,11 +65,69 @@ Para acceder a cada una se debe pagar una cuota de inscripción
 
 \newpage
 
-# Belén Puertas Gonzalez
+# Belén Puerta González
 
 ## Problema 1
+Aplicar los criterios de decisión bajo incertidumbre a la siguiente matriz de valores:
+
+```{r, echo=FALSE}
+datos <- data.frame(
+  row.names = c("d1", "d2", "d3", "d4", "d5"),
+  e1 = c(5, 12, 10, 13, 5),
+  e2 = c(3, 6, 4, 4, 8),
+  e3 = c(-1, 6, 8, 1, 10)
+)
+knitr::kable(datos)
+```
+
+Resolver primero para el caso FAVORABLE (beneficios) y, posteriormente, para el caso DESFAVORABLE (costos).
+
 
 ## Problema 2
+Un inversionista ha decidido analizar diversas opciones de 
+inversión, ya que busca maximizar sus ganancias bajo distintos 
+escenarios del mercado. Tras meses de estudio y consultas con 
+expertos financieros, ha reducido sus opciones a cuatro activos 
+financieros que, según su análisis, presentan distintas 
+oportunidades de rendimiento. 
+
+Ha identificado tres posibles escenarios del mercado: mercado 
+alcista, en el que se espera un crecimiento considerable de la 
+economía; mercado estable, donde los rendimientos se mantendrán 
+sin grandes cambios; y mercado bajista, en el que la economía 
+enfrentará dificultades.
+
+Con base en las proyecciones actuales, los rendimientos 
+estimados para cada activo bajo estos escenarios, expresados en 
+millones de euros, son los siguientes:
+
+* **Acciones tecnológicas**: en un escenario alcista generarían 15 
+                        millones, en un mercado estable producirían 
+                        7 millones, y en un mercado bajista solo 
+                        darían 1 millón. Este tipo de activo se ha 
+                        caracterizadompor su enorme potencial en épocas 
+                        de bonanza.
+ 
+ * **Bonos del gobierno**: se proyecta que generen un rendimiento 
+                      constante de 5 millones sin importar el estado 
+                      del mercado. Se consideran una opción de bajo 
+                      riesgo, especialmente en tiempos de incertidumbre, 
+                      debido a su estabilidad.
+ 
+ * **Fondos de bienes raíces**: bajo un mercado alcista podrían proporcionar 
+                           un rendimiento de 10 millones, en un mercado 
+                           estable 6 millones, y en un escenario bajista 
+                           2 millones. 
+ 
+ * **Criptomonedas**: en un mercado alcista su rentabilidad podría alcanzar 
+                  los 25 millones, en un mercado estable solo generarían 
+                  3 millones, y en un mercado bajista apenas 1 millón. 
+                  Este activo es conocido por su alta volatilidad.
+ 
+ Dado este panorama y los rendimientos proyectados, ¿cuál sería la opción 
+ más adecuada que recomendarías al inversionista?
+
+
 
 \newpage
 
